# fin_metrics_query

./: .gitignore  README.md  pyproject.toml
data/: schema.sql
src/: kag_agent.py  main.py  mcp_server.py  single_df.py  single_view_agent.py  util.py
src/graph/: kuzu_graph.py
src/make_graph/: metric_model.py
tests/: test_kag_agent.py  test_metric_tool.py  test_single_view_agent.py
